testsuite/tests/parsing/assert_location.reference
Fatal error: exception Assert_failure("assert_location.ml", 6, 4)
