testsuite/tests/parsing/assert_location.ml
(* TEST
   exit_status = "2"
*)

let () = (
    assert false
  )
